feat nav box for mobile

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,4 @@
+// COLORS
 $violet: #5964E0;
 $lightViolet: #939BF4;
 $veryDarkblue: #19292D;
@@ -6,8 +7,15 @@ $white: #FFFFFF;
 $lightGray: #F4F6F8;
 $gray: #9DAEC2;
 $darkGray: #6E8090;
+$shadow: #D7D7D7;
 
+// FONTS
 $primaryFont: 'Kumbh Sans', sans-serif;
 
+// MEDIA QUERIES
 $tablet: 768px;
 $desktop: 1200px;
+
+// LAYOUT
+$navPadding: 40px;
+$borderRadius: 5px;
