--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@ $lightGray: #F4F6F8;
 $gray: #9DAEC2;
 $darkGray: #6E8090;
 $shadow: #D7D7D7;
+$searchBarGray: #19202D;
 
 // FONTS
 $primaryFont: 'Kumbh Sans', sans-serif;
@@ -17,5 +18,5 @@ $tablet: 768px;
 $desktop: 1200px;
 
 // LAYOUT
-$navPadding: 40px;
+$navPadding: 46px;
 $borderRadius: 6px;
