feat nav completed with mqueries

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,7 @@ $gray: #9DAEC2;
 $darkGray: #6E8090;
 $shadow: #D7D7D7;
 $searchBarGray: #19202D;
+$radioButtonGray: #979797;
 
 // FONTS
 $primaryFont: 'Kumbh Sans', sans-serif;
@@ -18,5 +19,6 @@ $tablet: 768px;
 $desktop: 1200px;
 
 // LAYOUT
-$navPadding: 46px;
+$navPadding: 40px;
 $borderRadius: 6px;
+$smallBorderRadius: 3px;
