feat: job view with mqueries

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 // COLORS
 $violet: #5964e0;
 $lightViolet: #939bf4;
+$veryLightViolet: #e9e9f4;
 $veryDarkblue: #19292d;
 $midnight: #121721;
 $white: #ffffff;
